# jp-engine-guide

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
chapter-0/: CMakeLists.txt
chapter-0/engine/: CMakeLists.txt
chapter-0/game/: CMakeLists.txt  main.cc
chapter-1/: CMakeLists.txt
chapter-1/engine/: CMakeLists.txt  app.cc  resource_manager.cc  resource_manager.h
chapter-1/game/: CMakeLists.txt  main.cc  player.cc  player.h
chapter-2/: CMakeLists.txt
chapter-2/engine/: CMakeLists.txt  app.cc  app.h  tilemap.cc  tilemap.h
chapter-2/game/: CMakeLists.txt  background.cc  background.h  main.cc  mushroom.cc  mushroom.h  player.cc  player.h  tile_id.h
chapter-3/: CMakeLists.txt
chapter-3/engine/: CMakeLists.txt  app.cc  resource_manager.cc  resource_manager.h  scene.cc  scene.h  tilemap.cc
chapter-3/game/: CMakeLists.txt  background.h  default_scene.cc  mushroom.cc  mushroom.h  player.cc  player.h
chapter-3/game/resources/: README.md
chapter-4/: CMakeLists.txt
chapter-4/engine/: CMakeLists.txt  app.h  circle_collider.cc  collider.h  input.cc  node.cc  node.h  rectangle_collider.cc  scene.cc  scene.h  tilemap.h  tileset.h
chapter-4/game/: CMakeLists.txt  default_scene.cc  default_scene.h  game_manager.cc  game_manager.h  mushroom.cc  mushroom.h  player.cc  player.h
chapter-5/: CMakeLists.txt
chapter-5/engine/: CMakeLists.txt  app.cc  app.h  camera.cc  camera_manager.h  circle_collider.h  derived.h  layer.h  node.cc  physics.h  rectangle_collider.h  scene.cc  scene.h  tileset.cc
chapter-5/game/: CMakeLists.txt  banana.cc  banana.h  default_scene.cc  follow_player.cc  follow_player.h  game_manager.cc  game_manager.h  mushroom.cc  player.cc  player.h  score_manager.h  tile_id.h
chapter-6/: CMakeLists.txt
chapter-6/engine/: CMakeLists.txt  camera.h  camera_manager.cc  circle_collider.cc  collider.cc  fsm.h  input.h  node.cc  node.h  physics.cc  rectangle_collider.cc  resource_manager.cc  resource_manager.h  scene.h  sprite_sheet_animation.cc  sprite_sheet_animation.h  state.h  tile.cc  tile.h  tilemap.cc  transition.h
chapter-6/game/: CMakeLists.txt  background.cc  banana.cc  banana.h  default_scene.cc  end.cc  end.h  follow_player.cc  follow_player.h  game_manager.cc  game_manager.h  lose_canvas.cc  lose_canvas.h  main.cc  mushroom.cc  mushroom.h  plant.cc  plant.h  plant_bullet.cc  plant_bullet.h  player.cc  player.h  score_manager.cc  win_canvas.cc  win_canvas.h
